[project]
name = "ex-graph"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "neo4j>=5.28.1",
    "neomodel>=5.4.5",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "ruff>=0.11.11",
    "structlog>=25.4.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "uvicorn>=0.34.2",
]

[tool.ruff]
src = ["app", "tests"]

###
# pytest settings
###
[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
env_files = [".test.env"]
